Autoformat a bunch more